# the-next-interview

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md
.github/workflows/: deploy-agents.yml  deploy-frontend.yml
agents/: .dockerignore  .env.example  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  server.py
agents/answer_evaluator/: __init__.py
agents/ats_analyzer/: __init__.py
agents/code_challenge/: __init__.py
agents/interview_system/: __init__.py
agents/interview_system/agents/: __init__.py  answer_evaluator.py  ats_analyzer.py  code_challenge.py  pipeline.py  question_generator.py  readiness_assessor.py  recommendation_agent.py  resume_parser.py  vacancy_matcher.py
agents/question_generator/: __init__.py
agents/readiness_assessor/: __init__.py
agents/recommendation_agent/: __init__.py
agents/resume_parser/: __init__.py
agents/tests/: test_salary.py
agents/text_resume_parser/: __init__.py
agents/tools/: __init__.py  document_ai_tools.py  resume_tools.py  salary_tools.py  vacancy_tools.py
agents/vacancy_matcher/: __init__.py
data/resumes/: fullstack-react-4yr.json  java-dev-sarah-5yr.json  kubernetes-engineer-marcus-5yr.json
data/vacancies/: kubernetes-engineer.json  (+12 more)
docs/: DEVELOPMENT.md  architecture-diagram.md
frontend/: .env.example  Dockerfile  cloudbuild.yaml  next.config.mjs  package-lock.json  package.json
job-descriptions/: database-engineer-mssql.md  java-developer.md  kubernetes-engineer.md
resumes/: database-engineer-mssql-resume.md  java-developer-resume.md  kubernetes-engineer-resume.md
(+56 files in other folders)
